# resume-tailor

./: .gitignore  README.md  pyproject.toml
examples/: job.md  sample_tailored.json
sources/: baseline.json  complete-profile.md  resume.tex
src/resume_tailor/: __init__.py  api.py  cli.py  renderer.py
src/resume_tailor/agents/: __init__.py  base.py  cli.py  mock.py  prompts.py
src/resume_tailor/schemas/: __init__.py  resume_plan.py
src/resume_tailor/storage/: __init__.py  base.py  local.py
templates/: resume.typ
