[project]
name = "resume-tailor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "shreyas", email = "shreyaskalvankar@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "typer>=0.26.8",
    "typst>=0.15.0",
    "uvicorn[standard]>=0.38.0",
]

[project.scripts]
resume-tailor = "resume_tailor:main"
resume-tailor-api = "resume_tailor.api:main"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
